# redditbot

./: README.md  pyproject.toml
reqs/: local_reqs.txt  requirements.txt
src/redditbot/: .env.example  __init__.py  async_reddit_token.py  managers.py  monitor.py  monitor_old.py  poster.py  reddit_thread_db_model.py  reddit_thread_model.py  tag_model.py  thread.py
src/redditbot/core/: config.py  consts.py
src/redditbot/red_sql/: __init__.py  link.py  monitor_sql.py  tag.py  thread_sql.py
tests/: conftest.py  test_dc.py  test_new.py  test_reddit.py  test_sql.py
